--- a/templates/teaching.html
+++ b/templates/teaching.html
@@ -14,9 +14,9 @@
 <body>
   <h2>教學資源</h2>
   <button onclick="location.href='/tongue_teaching'">舌象分類教學</button>
-  <button onclick="location.href='/practice'">舌象判別練習</button>
-  <button onclick="alert('舌苔知識測驗 - 開發中')">舌苔知識測驗</button>
-  <button onclick="alert('病例推論練習 - 開發中')">病例推論練習</button>
+  <button onclick="alert('舌象判別練習 - 開發中')">舌象判別練習</button>
+  <button onclick="alert('中西醫對照查詢 - 開發中')">中西醫對照查詢</button>
+  <button onclick="location.href='/practice_zone'">五區診斷練習</button>
   <button onclick="history.back()">上一頁</button>
 </body>
 </html>
