--- a/templates/practice.html
+++ b/templates/practice.html
@@ -5,7 +5,7 @@
   <h2>{{ question.question }}</h2>
   <img src="{{ question.image_url }}" alt="舌照" width="300"><br><br>
 
-  <form method="POST" action="/submit_answer">
+  <form method="POST" action="/submit_practice_answer">
     {% for choice in question.choices %}
       <input type="radio" name="answer" value="{{ choice }}" required> {{ choice }}<br>
     {% endfor %}
