--- a/templates/teaching.html
+++ b/templates/teaching.html
@@ -15,7 +15,7 @@
   <h2>教學資源</h2>
   <button onclick="location.href='/tongue_teaching'">舌象分類教學</button>
   <button onclick="location.href='/practice'">舌象判別練習</button>
-  <a class="btn" href="{{ url_for('practice.practice_index') }}">中醫五區辨識練習</a>
+  <button class="btn" onclick="location.href='/practice'">中醫五區辨識練習</button>
   <button onclick="location.href='/practice_zone'">五區診斷練習</button>
   <button onclick="history.back()">上一頁</button>
 </body>
