--- a/practice_app/templates/practice/index.html
+++ b/practice_app/templates/practice/index.html
@@ -23,7 +23,7 @@
 
   <div id="videoWrapper">
     <video id="camera" autoplay playsinline muted></video>
-    <img id="overlay" src="{{ url_for('practice.static', filename='practice/overlay_practice.png') }}" alt="">
+    <img id="overlay" src="{{ url_for('static', filename='overlay.png') }}" alt="">
   </div>
 
   <div>
