--- a/templates/teaching.html
+++ b/templates/teaching.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <h2>教學資源</h2>
-  <button onclick="location.href='/tongue_teaching'">舌象分類教學</button>
+  <button onclick="location.href='/tongue_teaching_static'">舌象分類教學</button>
   <button onclick="location.href='/quiz'">舌象判別練習</button>
   <button class="btn" onclick="location.href='/practice'">中醫五區辨識練習</button>
   <button onclick="location.href='/practice_zone'">五區診斷練習</button>
