--- a/templates/tongue_teaching_static.html
+++ b/templates/tongue_teaching_static.html
@@ -29,9 +29,9 @@
     <div class="panel">
       <div class="card">
         <div class="tongue-box">
-          <!-- 你可以換成自己的示意圖 -->
-          <img id="tongue-illustration" alt="舌頭示意圖" src="https://dummyimage.com/600x600/f5f5f5/aaa.png&text=Tongue+Diagram">
-        </div>
+          <img id="tongue-illustration"
+             alt="舌頭示意圖"
+             src="{{ url_for('static', filename='images/tongue-diagram.jpg') }}">
       </div>
       <div class="card">
         <h3>步驟 1：選擇部位</h3>
