--- a/templates/teaching.html
+++ b/templates/teaching.html
@@ -16,7 +16,7 @@
   <button onclick="location.href='/tongue_teaching_static'">舌象分類教學</button>
   <button onclick="location.href='/quiz'">舌象判別練習</button>
   <button class="btn" onclick="location.href='/practice'">中醫五區辨識練習</button>
-  <button onclick="location.href='/practice_zone'">五區診斷練習</button>
+  <button onclick="location.href='/tongue_quiz'">舌頭知識問答</button>
   <button onclick="history.back()">上一頁</button>
 </body>
 </html>
